# CTS

./: .env.example  .gitignore  README.md  SYSTEM_ARCHITECTURE.md  backend_deep_documentation.md  package.json  pnpm-lock.yaml  workflow.md
.cursor/: mcp.json
docs/: API_KEY_SETUP.md  BACKEND_ARCHITECTURE.md  EXTERNAL_MCP_SERVERS.md  LANGGRAPH_AGENTIC_MEMORY.md  MCP_PUBLIC_DEMO.md  MCP_README.md  MCP_TROUBLESHOOTING.md  MCP_USAGE_GUIDE.md  MESSAGE_AND_MCP_DATA_PROGRESS.md  NOTES_AND_TODO_PROMPTS.md  OLLAMA_SETUP.md  PRIVATE_LLM_NOTIFICATIONS.md  PROMPT_FLOW_VISUALIZATION.md  PUBLIC_APIS_FOR_MCP.md  SYSTEM_ARCHITECTURE.md  TOOL_EXECUTION_FLOW.md  public_mcp_specs.yaml
scripts/: run_migration_and_test.py  (+10 more)
services/api/: pyproject.toml  requirements.txt
services/api/src/: __init__.py  auth.py  config.py  db.py  main.py  mcp_available_servers.py  models.py  supabase_client.py  tool_trigger_hints.py
services/api/src/core/: __init__.py  constants.py  deps.py
services/api/src/langgraph_services/: __init__.py  chat_graph.py  graph_tracer.py  mcp_tools.py  model_factory.py
services/api/src/routers/: auth.py  chat.py  conversations.py  documents.py  mcp.py  memory.py  ollama.py  profiles.py
services/api/src/services/: chat_data_supabase.py  chat_service.py  conversation_service_supabase.py  document_service.py  document_service_supabase.py  mcp_client.py  mcp_data_service.py  mcp_service_supabase.py  memory_service.py  ollama_service.py  profile_service_supabase.py  user_settings_service_supabase.py
services/api/tests/: test_auth.py  test_chat_graph_tool_fallback.py
(+73 files in other folders)
